# serializer version: 1
# name: test_all_entities[switch.test_reolink_cam_auto_focus-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_cam_auto_focus',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Auto focus',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Auto focus',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'auto_focus',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_auto_focus',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_auto_focus-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam Auto focus',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_cam_auto_focus',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_auto_tracking-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_cam_auto_tracking',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Auto tracking',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Auto tracking',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'auto_tracking',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_auto_tracking',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_auto_tracking-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam Auto tracking',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_cam_auto_tracking',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_doorbell_button_sound-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_cam_doorbell_button_sound',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Doorbell button sound',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Doorbell button sound',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'doorbell_button_sound',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_doorbell_button_sound',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_doorbell_button_sound-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam Doorbell button sound',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_cam_doorbell_button_sound',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_email_on_event-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_cam_email_on_event',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Email on event',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Email on event',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'email',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_email',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_email_on_event-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam Email on event',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_cam_email_on_event',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_ftp_upload-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_cam_ftp_upload',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'FTP upload',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'FTP upload',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ftp_upload',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_ftp_upload',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_ftp_upload-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam FTP upload',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_cam_ftp_upload',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_guard_return-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_cam_guard_return',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Guard return',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Guard return',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'guard_return',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_gaurd_return',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_guard_return-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam Guard return',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_cam_guard_return',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_hardwired_chime_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_cam_hardwired_chime_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hardwired chime enabled',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Hardwired chime enabled',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hardwired_chime_enabled',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_hardwired_chime_enabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_hardwired_chime_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam Hardwired chime enabled',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_cam_hardwired_chime_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_hub_ringtone_on_event-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_cam_hub_ringtone_on_event',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hub ringtone on event',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Hub ringtone on event',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hub_ringtone_on_event',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_buzzer',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_hub_ringtone_on_event-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam Hub ringtone on event',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_cam_hub_ringtone_on_event',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_infrared_lights_in_night_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_cam_infrared_lights_in_night_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Infrared lights in night mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Infrared lights in night mode',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ir_lights',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_ir_lights',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_infrared_lights_in_night_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam Infrared lights in night mode',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_cam_infrared_lights_in_night_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_manual_record-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_cam_manual_record',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Manual record',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Manual record',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'manual_record',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_manual_record',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_manual_record-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam Manual record',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_cam_manual_record',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_pir_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_cam_pir_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'PIR enabled',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'PIR enabled',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pir_enabled',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_pir_enabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_pir_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam PIR enabled',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_cam_pir_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_pir_reduce_false_alarm-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_cam_pir_reduce_false_alarm',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'PIR reduce false alarm',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'PIR reduce false alarm',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pir_reduce_alarm',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_pir_reduce_alarm',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_pir_reduce_false_alarm-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam PIR reduce false alarm',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_cam_pir_reduce_false_alarm',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_pre_recording-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_cam_pre_recording',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Pre-recording',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Pre-recording',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pre_record',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_pre_record',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_pre_recording-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam Pre-recording',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_cam_pre_recording',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_pre_siren_on_event-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_cam_pre_siren_on_event',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Pre-siren on event',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Pre-siren on event',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pre_siren_on_event',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_pre_siren_on_event',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_pre_siren_on_event-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam Pre-siren on event',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_cam_pre_siren_on_event',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_privacy_mask-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_cam_privacy_mask',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Privacy mask',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Privacy mask',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'privacy_mask',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_privacy_mask',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_privacy_mask-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam Privacy mask',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_cam_privacy_mask',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_privacy_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_cam_privacy_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Privacy mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Privacy mode',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'privacy_mode',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_privacy_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_privacy_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam Privacy mode',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_cam_privacy_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_ptz_patrol-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_reolink_cam_ptz_patrol',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'PTZ patrol',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'PTZ patrol',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ptz_patrol',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_ptz_patrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_ptz_patrol-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam PTZ patrol',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_cam_ptz_patrol',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_push_notifications-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_cam_push_notifications',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Push notifications',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Push notifications',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'push_notifications',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_push_notifications',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_push_notifications-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam Push notifications',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_cam_push_notifications',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_record-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_cam_record',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Record',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Record',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'record',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_record',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_record-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam Record',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_cam_record',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_record_audio-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_cam_record_audio',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Record audio',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Record audio',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'record_audio',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_record_audio',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_record_audio-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam Record audio',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_cam_record_audio',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_siren_on_event-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_cam_siren_on_event',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Siren on event',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Siren on event',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'siren_on_event',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_siren_on_event',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_cam_siren_on_event-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam Siren on event',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_cam_siren_on_event',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.test_reolink_name_email_on_event-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_name_email_on_event',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Email on event',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Email on event',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'email',
    'unique_id': 'ABC1234567D89EFG_email',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_name_email_on_event-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_name Email on event',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_name_email_on_event',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.test_reolink_name_ftp_upload-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_name_ftp_upload',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'FTP upload',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'FTP upload',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ftp_upload',
    'unique_id': 'ABC1234567D89EFG_ftp_upload',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_name_ftp_upload-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_name FTP upload',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_name_ftp_upload',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.test_reolink_name_hub_ringtone_on_event-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_name_hub_ringtone_on_event',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hub ringtone on event',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Hub ringtone on event',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hub_ringtone_on_event',
    'unique_id': 'ABC1234567D89EFG_buzzer',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_name_hub_ringtone_on_event-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_name Hub ringtone on event',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_name_hub_ringtone_on_event',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.test_reolink_name_push_notifications-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_name_push_notifications',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Push notifications',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Push notifications',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'push_notifications',
    'unique_id': 'ABC1234567D89EFG_push_notifications',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_name_push_notifications-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_name Push notifications',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_name_push_notifications',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.test_reolink_name_record-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_reolink_name_record',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Record',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Record',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'record',
    'unique_id': 'ABC1234567D89EFG_record',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_reolink_name_record-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_name Record',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_reolink_name_record',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
